--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,5 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
   %body
+    = render 'layouts/flash_messages'
     = yield
