iij access tokenを保存できるように

--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -3,3 +3,9 @@
 - if current_user.iijmio_token.blank?
   .alert IIJ mio の設定がされていません
   = link_to 'IIJ mio トークンを発行', iijmio_authorization_url
+- else
+  %dl
+    %dt IIJ mio アクセストークン
+    %dd= current_user.iijmio_token
+    %dt IIJ mio アクセストークン取得日時
+    %dd= l current_user.iijmio_token_created_at
