--- a/app/views/schedule_mailer/threshold_exceed_notification.html.haml
+++ b/app/views/schedule_mailer/threshold_exceed_notification.html.haml
@@ -1,3 +1,3 @@
 %p #{@user.name} さん
-%p 前回の利用から100MB以上新たに超過しました。現在のデータ利用量は #{@current_volume}MB です。
+%p 前回の利用から100MB以上新たに超過しました。現在のクーポン残量は #{@current_volume}MB です。
 %p 前回: #{@user.previous_volume}MB
